--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,6 @@
   height: 180px;
   margin-bottom: 12px;
   overflow: hidden;
-  border: 1px solid #fff;
 }
 .block.carousel .clip__image img {
   width: 100%;
@@ -171,7 +170,7 @@
 .block.carousel .carousel__images::before {
   content: "";
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   height: 100%;
   width: 250px;
   background: linear-gradient(90deg, #131313, transparent);
@@ -184,7 +183,9 @@
   width: 100%;
   height: 100%;
   mix-blend-mode: multiply;
-  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 2;
 }
 
 .swiper-button-prev, .swiper-button-next {
@@ -201,4 +202,8 @@
 }
 .swiper-button-prev::after, .swiper-button-prev::before, .swiper-button-next::after, .swiper-button-next::before {
   display: none;
+}
+
+.swiper-slide-next .clip__image {
+  border: 1px solid #fff;
 }/*# sourceMappingURL=main.css.map */
