--- a/css/main.scss
+++ b/css/main.scss
@@ -86,7 +86,7 @@ $font-poppins: 'Poppins', sans-serif;
             height: 180px;
             margin-bottom: 12px;
             overflow: hidden;
-            border: 1px solid #fff;
+            // border: 1px solid #fff;
 
             img {
                 width: 100%;
@@ -196,7 +196,7 @@ $font-poppins: 'Poppins', sans-serif;
         &::before {
             content: '';
             position: absolute;
-            z-index: 2;
+            z-index: 3;
             height: 100%;
             width: 250px;
             background: linear-gradient(90deg, #131313, transparent);
@@ -209,7 +209,9 @@ $font-poppins: 'Poppins', sans-serif;
             width: 100%;
             height: 100%;
 			mix-blend-mode: multiply;
-            left: 0;
+            right: 0;
+            top: 0;
+            z-index: 2;
 		}
     }
 }
@@ -231,5 +233,11 @@ $font-poppins: 'Poppins', sans-serif;
 
     &::after, &::before {
         display: none;
+    }
+}
+
+.swiper-slide-next {
+    .clip__image {
+        border: 1px solid #fff;
     }
 }
